Fix circle covering text in H1

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -317,7 +317,16 @@ main section .section-content-wrapper {
 .hero .section-content-wrapper .hero-content .hero-content-title {
   background: var(--gradient-1);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
+  -webkit-text-fill-color: transparent;
+}
+.hero .section-content-wrapper .hero-content .hero-content-title strong {
+  background: inherit;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 @media screen and (min-width: 768px) {
   .hero .section-content-wrapper .hero-content .hero-content-title {
